# personal_reestr

./: .gitignore  README.md  start.bat
reestr_gks/: db.sqlite3  manage.py  pyproject.toml
reestr_gks/reestr_gks/: asgi.py  settings.py  urls.py  wsgi.py
reestr_gks/reestr_list/: admin.py  admin_mixins.py  apps.py  forms.py  models.py  urls.py  views.py
reestr_gks/reestr_list/management/commands/: add_db.py  add_povername.py  example_command.py
reestr_gks/reestr_list/static/reestr_list/css/: reestr_list.css
reestr_gks/reestr_list/static/reestr_list/js/: add_to_register.js
reestr_gks/reestr_list/templates/: index.html
reestr_gks/reestr_list/templates/reestr_list/: add_to_reestr.html  add_to_register.html  list.html
