[tool.poetry]
name = "reestr-gks"
version = "0.1.0"
description = ""
authors = ["Turchikz <saitov.artur96@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.4"
gunicorn = "^22.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
